syntax = "proto3";

option csharp_namespace = "Client";

package animals;

service Cats {
    rpc GetRandomCat(GetRandomCatRequest) returns (GetRandomCatReply);
    rpc GetCats(GetCatsRequest) returns (GetCatsReply);
}

message GetRandomCatRequest {}
message GetCatsRequest {}

message Cat {
    string id = 1;
    string resource_url = 2;
}

message GetRandomCatReply {
    Cat cat = 1;
}

message GetCatsReply {
    repeated Cat cats = 1;
}

